# RustProgramming

./: Notes_RedBPF.txt  README.md  RustProgramming.md  RustProgrammingContents.xlsx  Syllabus.html  Syllabus2.html  a.out  async_fun  async_fun.rs  bpftrace.txt  clean_projects.py  sample.c  sample.rs
Algos/myalgos/: Cargo.toml
Alogs/: heap.rs
BasicConcepts/: a.out
BasicConcepts/1.HelloWorld/: a.out  c_modulo.c  c_modulo_noopt.s  c_modulo_opt.s  document.rs  libdoc.rlib
BasicConcepts/2.Primitives/: a.out  array1.rs  leftshift.c  leftshift.s  literals.rs  loop.rs  ref.rs  touple.rs
BasicConcepts/3.CustomTypes/: structure.rs
BasicConcepts/9.Functions/: func1.rs  func2.rs
C_Issues_Presentation/: a.out  all_memory_issues.c
Courses/: RustCyberSecurityAutomotive.html
Courses/SessionsFromAug25/: Contents.html
Daily/: BufferOverFlow  BufferOverFlow.rs
Daily/Aug22/: pointer  pointer.rs
Daily/Concepts/: break_outer_loo  break_outer_loo.rs  simple_match  simple_match.rs
Daily/July27/: multi_thread  multi_thread.rs  multi_thread_arc_mutex.rs  multi_thread_function  multi_thread_function.rs
Daily/July28/: lifetime  lifetime.rs  multi_thread_arc_mutex  struct  struct.rs
Daily/July30/: arc_ref_count.rs  enums  enums.rs  strings  strings.rs  trait1  trait1.rs  tuples  tuples.rs
Daily/July31/: which_core.rs
Daily/Sep02_100_problems/: prog2_read_float_int  prog2_read_float_int.rs  read_line_cmd  read_line_cmd.rs
Desktop/sampleDesk/: package.json
EmbeddedSsytemsTopics/: integer_overflow.rs  vector.rs
EmbeddedSystems/arduino_LED_blink/: Cargo.toml
HarmanDemo/: BufferOverRead  BufferOverRead.c  BufferOverRead.rs  a.out  arc  arc.rs  arc_example2  arc_example2.rs  errorhanling1  errorhanling1.rs  thread  thread.rs
InterviewPreparation/: Overview.html  README.md  db.sqlite3  manage.py  requirements.txt
InterviewPreparation/code_runner/: admin.py  apps.py  models.py  urls.py  views.py
InterviewPreparation/materials/: admin.py  apps.py  models.py  urls.py  views.py
InterviewPreparation/rust_interview_prep/: asgi.py  settings.py  urls.py  wsgi.py
InterviewPreparation/templates/: base.html
Materials/: .~lock.Presentation1_rustc_cargo.odp#  .~lock.RustPapersStudy.odp#  Basic.txt  DevDeed.docx  Presentation1_rustc_cargo.odp  RustPapersStudy.odp
Practice/: heap.rs  loops.rs
Practice/Clousures/: prob1  prob1.rs
Presentation01/crates/recuerdame-main/recuerdame/: Cargo.toml
Presentation01/crates/recuerdame-main/recuerdame-macros/: Cargo.toml  plantuml_iudx.txt
Presentation01/crates/recuerdame-main/recuerdame-macros/src/: lib.rs
Presentation01/crates/recuerdame-main/recuerdame/benches/: logistic_reg.rs
Presentation01/crates/recuerdame-main/recuerdame/src/: lib.rs
Presentation01/crates/recuerdame-main/recuerdame/tests/: custom_types.rs  precalculate_macro.rs
Presentations/: .~lock.FirstPresentation.odp#  FirstPresentation.odp
Presentations/CompiulationProcess/: your_program  your_program.ll  your_program.rs
Presentations/ErrorHandling/: ThreadPanic  ThreadPanic.rs  UsingTry  UsingTry.rs
Presentations/Threads/: SharedPtr_Future.cpp  SharedPtr_Mutex.cpp  a.out
Profiler/profile/: Cargo.toml
Programs/2.Ownership/: own1.rs  own_int.rs  own_string.rs  (+1 more)
Projects/Arduino/blinkLED/bink-led/: Cargo.toml  README.md  blink.hex
Projects/Arduino/blinkLED/bink-led/src/: main.rs
Projects/Udemy/tutorial/: Cargo.toml
Projects/Udemy/tutorial/src/: main.rs
RustDocChapters/: create_folders.py
RustDocChapters/Projects/synchro_demo/synch/: Cargo.toml
RustDocChapters/Projects/synchro_demo/synch/src/: main.rs
RustDocChapters/UdemyCourse/day1/projects/functions/funcs/: Cargo.toml
RustDocChapters/UdemyCourse/day1/projects/functions/funcs/src/: main.rs
STM32/: README.txt
Step1/: parse.rs
Topics/: break_outer_loop.rs  break_with_value.rs
Trainings/: cve_backed_c_c_bugs_vs_rust_mitigations_html_page.html
WebSites/: index.html  scripts.js  styles.css
cross_compile_example/: Cargo.toml
enums/: match_cahrs  match_cahrs.rs  simple  simple.rs
(+328 files in other folders)
