[package]
name = "recuerdame-macros"
version = "0.1.0"
edition = "2024"
authors = ["Andrés F. Quintero <afquinteromoreano@gmail.com>"]
description = "Macros to for the recuerdame crate."
repository = "https://github.com/andyquinterom/recuerdame"
license = "MIT"
readme = "../README.md"

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
recuerdame = { path = "../recuerdame" }


[lib]
proc-macro = true
