[package]
name = "recuerdame"
version = "0.2.1"
edition = "2024"
authors = ["Andrés F. Quintero <afquinteromoreano@gmail.com>"]
description = "Pre-calculate functions at compile-time rather than run-time."
repository = "https://github.com/andyquinterom/recuerdame"
license = "MIT"
readme = "../README.md"

[dependencies]
recuerdame-macros = { path = "../recuerdame-macros", version = "0.1.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "logistic_reg"
harness = false
